Spark ingestion, README